# Competitive_Programming

./: CMakeLists.txt  README.md
Assuit_Recursion/: 3n + 1 Sequence.cpp  Array Average.cpp  Base Converssion.cpp  Combination.cpp  Count Vowels.cpp  Creating Expression1.cpp  Factorial.cpp  Fibonacci.cpp  Inverted Pyramid.cpp  Knapsack.cpp  Left Max.cpp  Log2.cpp  Max Number.cpp  Number of Ways.cpp  Palindrome Array.cpp  Print Digits using Recursion.cpp  Print Even Indices.cpp  Print Recursion.cpp  Print from 1 to N.cpp  Print from N to 1.cpp  Pyramid.cpp  README.md  Reach Value.cpp  S_Array_Average.cpp  Suffix Sum.cpp  Sum of a Matrix.cpp  Summation.cpp  The maximum path sum.cpp  U_Knapsack.cpp  V_Creating_Expression1.cpp  W_Reach_Value.cpp  Y_Number_of_Ways.cpp
BitMasking/: xor basis.cpp
CSES-solutions/Graph Algorithms/: Building Teams  Counting Rooms.cpp  Labyrinth.cpp  Message Route  Planets Queries I  Road Construction  Road Reparation  Shortest Routes I  Shortest Routes II
CSES-solutions/Introductory Problems/: Apple Division.cpp  Bit Strings.cpp  Chessboard and Queens.cpp  Coin Piles.cpp  Creating Strings.cpp  Gray Code.cpp  Increasing Array.cpp  Missing Number.cpp  Number Spiral.cpp  Palindrome Reorder.cpp  Tower of Hanoi.cpp  Trailing Zeros.cpp  Two Sets.cpp  Weird Algorithm.cpp
CSES-solutions/Range Queries/: Distinct Values Queries  Dynamic Range Minimum Queries  Dynamic Range Sum Queries  Hotel Queries  List Removals  Polynomial Queries  Prefix Sum Queries  Range Queries and Copies  Range Update Queries  Range Updates and Sums  Range Xor Queries  Salary Queries  Static Range Minimum Queries  Static Range Sum Queries  StaticRangeSumQueries.cpp  Subarray Sum Queries
CSES-solutions/Sorting and Searching/: Apartments.cpp  Array Division.cpp  Array_Division.cpp  Collecting Numbers.cpp  Collecting_Numbers.cpp  Concert Tickets.cpp  Distinct Numbers.cpp  Distinct Values Subarrays II.cpp  Distinct_Numbers.cpp  Distinct_Values_SubarraysII.cpp  Factory_Machines.cpp  Ferris Wheel.cpp  Ferris_Wheel.cpp  Maximum_Subarray_Sum.cpp  Nearest Smaller Values.cpp  Nearest_Smaller_Values.cpp  Playlist.cpp  Restaurant Customers.cpp  Restaurant_Customers.cpp  Room Allocation.cpp  Room_Allocation.cpp  Subarray Sums II.cpp  Subarray_SumsI.cpp  Subarray_SumsII.cpp  Sum of Four Values.cpp  Sum of Three Values.cpp  Sum of Two Values.cpp  Sum_of_Four_Values.cpp  Sum_of_Three_Values.cpp  Sum_of_Two_Values.cpp
DP/DP with Solution Construction/: Changing a String.cpp  Changing_a_String.cpp  LCS.cpp  Palindromic Subsequence.cpp  Palindromic_Subsequence.cpp  README.md
DP/Problems/: Book Shop.cpp  Book_Shop.cpp  Coin Combinations I.cpp  Coin Combinations II.cpp  Coin_Combinations_I.cpp  Coin_Combinations_II.cpp  Counting Numbers.cpp  Counting_Numbers.cpp  Dice Combinations.cpp  Digit Sum.cpp  Edit Distance.cpp  Frog 1.cpp  Frog 2.cpp  Frog_2.cpp  Grid Paths I.cpp  Grid_1.cpp  Knapsack 1.cpp  Knapsack 2.cpp  Knapsack_1.cpp  Knapsack_2.cpp  Longest Path.cpp  Longest_Path.cpp  Minimizing Coins.cpp  README.md  Removing Digits.cpp  Removing_Digits.cpp
Data Structure/: Binary Trie.cpp  Binary_Trie.cpp  Lazy Segment tree.cpp  Mo's Algorithm  Sparse Table.cpp  Sparse_table.cpp  ordered Multiset.cpp  ordered Set.cpp  orderedMultiset.cpp  orderedSet.cpp
Data Structure/MO/: Mo.cpp
Data Structure/MO/Problems/: D-query.cpp  Little Elephant and Array.cpp  Little_Elephant_and_Array.cpp  Magic Number Group.cpp  Most Frequent Value.cpp  Most_Frequent_Value.cpp  Powerful array.cpp  Powerful_array.cpp  Robin Hood Archery.cpp  Robin_Hood_Archery.cpp  Triple Index.cpp  Triple_Index.cpp  XOR and Favorite Number.cpp  XOR_and_Favorite_Number.cpp
Data Structure/Segement tree/Problmes/: Dynamic_Range_Minimum_Queries.cpp
Data Structure/Segment tree/: README.md  Segment tree.cpp  Segment_tree.cpp
Data Structure/Segment tree/Problems/: Ant colony.cpp  Distinct Characters Queries.cpp  Distinct_Characters_Queries.cpp  Dynamic Range Minimum Queries.cpp  Dynamic Range Sum Queries.cpp  Dynamic_Range_Minimum_Queries.cpp  Factory Repairs.cpp  Hotel Queries.cpp  Interesting Array.cpp  Interesting_Array.cpp  Prefix Sum Queries.cpp  R2D2 and Droid Army.cpp  README.md  Range Xor Queries.cpp  Salary Queries.cpp  Salary_Queries.cpp  Sereja and Brackets.cpp  Sereja_and_Brackets.cpp  Static Range Minimum Queries.cpp  Static_Range_Minimum_Queries.cpp  Subarray Sum Queries.cpp  Subarray_Sum_Queries.cpp  Xenia and Bit Operations.cpp  Xenia_and_Bit_Operations.cpp
Graph Theory/: Binary Lifting  Dijkstra.cpp  Dinic-(Max_Flow).cpp  Dinic_Max_Flow.cpp  Edmonds-Karp.cpp  Floyd  LCA (Binary Lifting)  LCA (Weighted)
Math/: Counting.cpp
Math/Number Theory/: Sieve.cpp
Strings/: KMP  Trie.cpp  Z-Algorithm
